Creacion visual de la tabla

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,21 @@
         </form>
       </div>
 
+      <div>
+        <table class="table" id="activityTable">
+          <thead>
+            <tr>
+              <th scope="col">Hora</th>
+              <th scope="col">Viernes</th>
+              <th scope="col">Sabado</th>
+              <th scope="col">Domingo</th>
+            </tr>
+          </thead>
+          <tbody>
+            
+          </tbody>
+        </table>
+      </div>
 
 
     </div>
