correccion en la seleccion de la actividad

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             <option value="taller">Taller</option>
             <option value="juegoMesa">Juegos de mesa</option>
             <option value="wargame">Wargame</option>
-            <option value="rol-sr">Rol/Escape Room</option>
+            <option value="rolSr">Rol/Escape Room</option>
           </select>
         </div>
 
