correccion de la tabla y de los botones de esta

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,10 @@
     </nav>
   </header>
 
-
   <div id="container">
     <div id="containerForm d-flex " class="m-5">
       <form class="row g-1 mx-auto p-2 text-dark">
-        <p class="h2">Formulario</p>
+        <p class="h2">Registrar Actividad</p>
 
         <div class="form-group mb-3">
           <label for="typeActivity">Clase de actividad.</label>
@@ -77,9 +76,9 @@
         <div class="form-group mb-3">
           <label for="day">Día</label>
           <select class="form-control" id="day">
-            <option selected disabled value="">-- Selecciona el dia -- </option>
+            <option selected disabled value="">-- Selecciona el día -- </option>
             <option value="Viernes">Viernes</option>
-            <option value="Sabado">Sabado</option>
+            <option value="Sabado">Sábado</option>
             <option value="Domingo">Domingo</option>
 
           </select>
@@ -108,9 +107,9 @@
       </form>
     </div>
 
-    <div>
+    <div class="table-responsive row m-5 mx-auto p-5">
       <p class="h2">Horario</p>
-      <table class="table .table-striped " id="activityTable">
+      <table class="table table-striped " id="activityTable">
         <thead class="tHead">
 
         </thead>
@@ -121,7 +120,24 @@
       </table>
     </div>
 
+  </div>
 
+  <div class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+         
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="./js/app.js"></script>
