--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,14 @@
   </header>
 
   <div id="container">
-    <div id="containerForm d-flex " class="m-5">
-      <form class="row g-1 mx-auto p-2 text-dark">
+    <div id="containerForm" class=" d-flex m-5">
+      <form class="row text-dark">
         <p class="h2">Registrar Actividad</p>
+
+        <!-- <div class="form-group mb-3">
+          <label for="nameActivity">Nombre Actividad</label>
+          <input type="text" id="nameActivity">
+        </div> -->
 
         <div class="form-group mb-3">
           <label for="typeActivity">Clase de actividad.</label>
@@ -107,7 +112,7 @@
       </form>
     </div>
 
-    <div class="table-responsive row m-5 mx-auto p-5">
+    <div class="table-responsive row  mx-auto p-5">
       <p class="h2">Horario</p>
       <table class="table table-striped " id="activityTable">
         <thead class="tHead">
@@ -122,19 +127,17 @@
 
   </div>
 
-  <div class="modal" tabindex="-1">
+  <div class="modal fade" id="activityModal" tabindex="-1" aria-labelledby="activityModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
+          <h5 class="modal-title" id="activityModalLabel"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-         
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
