--- a/src/index.html
+++ b/src/index.html
@@ -103,8 +103,8 @@
                     </select>
                   </div>
 
-                  <div class=" d-flex justify-content-end">
-                    <button type="submit" id="btnSubmit" class="btn text-light btn-primary min-w-100">Añadir Actividad</button>
+                  <div class=" d-flex justify-content-end mt-5">
+                    <button type="submit" id="btnSubmit" class="btn  btn-primary min-w-100">Añadir Actividad</button>
                   </div>
 
                 </div>
