--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                   </div>
 
                   <div class=" d-flex justify-content-end mt-5">
-                    <button type="submit" id="btnSubmit" class="btn  btn-primary min-w-100">Añadir Actividad</button>
+                    <button type="submit" id="btnSubmit" class="btn btn-primary min-w-100">Añadir Actividad</button>
                   </div>
 
                 </div>
@@ -141,7 +141,7 @@
         <div class="modal-body">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary min-w-80" data-bs-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
