correcion en los titulos del formulario

--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,12 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="mb-3">
-                    <label for="activityName" class="form-label">Nombre de la actividad</label>
+                    <label for="activityName" class="form-label"> <b>Nombre de la actividad</b></label>
                     <input type="text" class="form-control" id="activityName" placeholder="Introduce el nombre de la actividad">                  
                 </div>
 
                 <div class="mb-3">
-                  <label for="typeActivity" class="form-label">Clase de actividad.</label>
+                  <label for="typeActivity" class="form-label"><b>Clase de actividad</b></label>
                     <select class="form-control" id="typeActivity">
                       <option selected disabled value="">-- Selecciona la actividad --</option>
                       <option value="charla">Charla</option>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="place" class="form-label">Lugar</label>
+                  <label for="place" class="form-label"><b>Lugar</b></label>
                     <select class="form-control" id="place">
                       <option selected disabled value="">-- Selecciona el lugar -- </option>
                       <option value="jardin">Jardines del Prado</option>
@@ -85,7 +85,7 @@
 
               <div class="col-md-6">
                 <div class="mb-3">
-                    <label for="day" class="form-label">Día</label>
+                    <label for="day" class="form-label"><b>Día</b></label>
                     <select class="form-control" id="day">
                       <option selected disabled value="">-- Selecciona el día -- </option>
                       <option value="Viernes">Viernes</option>
@@ -96,7 +96,7 @@
                   </div>
 
                   <div class="mb-3">
-                    <label for="openHour" class="form-label">Hora apertura</label>
+                    <label for="openHour" class="form-label"><b>Hora apertura </b></label>
                     <select class="form-control" id="openHour">
                       <option selected disabled value="">-- Selecciona la hora de apertura --</option>
           
